# SDL_playground

./: CMakeLists.txt  main.c  vcpkg.json
simulation/: bodies.c  bodies.h  vectors.c  vectors.h
